# trailecoco

./: .gitignore  pubspec.yaml
.github/workflows/: android-build.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
ios/: .gitignore
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart
lib/config/: constants.dart  theme.dart
lib/game/: eco_trail_game.dart  spawner_manager.dart
lib/game/components/: flower.dart  hiker.dart  level_background.dart  puddle.dart  toxic_item.dart  trash_item.dart
lib/providers/: player_progress_provider.dart
lib/services/: storage_service.dart
lib/ui/overlays/: game_over.dart  how_to_play.dart  hud.dart  level_complete.dart  level_select.dart  main_menu.dart  pause_menu.dart  privacy_policy.dart  settings.dart  shop.dart
lib/ui/widgets/: juicy_button.dart  soft_card.dart
linux/: CMakeLists.txt  my_application.cc
macos/: .gitignore
macos/Runner/: AppDelegate.swift  Info.plist
macos/Runner.xcodeproj/: project.pbxproj
scripts/: generate-keystore.ps1
test/: widget_test.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
windows/runner/resources/: .gitkeep
(+3 files in other folders)
